--- a/HTML/minijuegos/memoria/style.css
+++ b/HTML/minijuegos/memoria/style.css
@@ -45,7 +45,7 @@ body{
 }
 .front{
     background-color: rgb(227, 227, 227);
-    background-image: url(imgs/question-square-svgrepo-com.svg);
+    background-image: url(imgs/question-square-svgrepo-com.png);
     background-repeat: no-repeat;
     background-position: center;
 }
