--- a/HTML/minijuegos/memoria/style.css
+++ b/HTML/minijuegos/memoria/style.css
@@ -48,6 +48,7 @@ body{
     background-image: url(imgs/question-square-svgrepo-com.png);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
 }
 
 .back{
@@ -105,6 +106,12 @@ body{
     box-shadow: 0px 0px 1vmin #a36f20;
 }
 
+.fondo-container
+{
+    position: absolute;
+    height: 100vh;
+    width: 100vmax;
+}
 
 
 
