--- a/CSS/galeria.css
+++ b/CSS/galeria.css
@@ -61,12 +61,43 @@
 }
 .div-texto:hover{transition-delay: 0.4s;color: #f0f0f0;}
 .foto{transition: ease-in-out 0.3s;width: 100%;height: auto;margin-top: 0vmin;transition-delay: 0.3s;}
-.cont-foto:hover .foto{transition-delay: 0s;margin-top: -12.5vmin;}
+.cont-foto:hover .foto{transition-delay: 0s;margin-top: 0vmin;}
 .fondo-container
 {
-    top: 0%;
-    position: sticky;
-    height: 100vh;
-    width: 100vmax;
-    margin-top: 100vh;
+    background-image: url("../IMG/Recursos/FondoGaleria.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-clip: content-box;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+}
+
+.contenedor-body
+{
+    overflow-y: scroll;
+    height: 90vh;
+}
+.contenedor-body::-webkit-scrollbar {width: 1.5vmin;}
+.contenedor-body::-webkit-scrollbar-track {background: transparent;}
+.contenedor-body::-webkit-scrollbar-thumb {background: #f0f0f0c9;border-radius: 2vmin;}
+
+.tostada
+{
+    transition: ease-in-out 0.4s;
+    font-size: 2vh;
+    z-index: 20;
+    position: absolute;
+    top: 88vh;
+    right: 5vh;
+    height: 10vh;
+    width: 25vh;
+    background-color: #E9A032;
+    border: solid #da942c;
+    box-shadow: 0px 0px 15px #4b47429a;
+    border-radius: 2.5vmin;
+    text-align: center;
+    display: flex;
+    align-items: center;
 }
