--- a/CSS/galeria.css
+++ b/CSS/galeria.css
@@ -76,6 +76,7 @@
 .contenedor-body
 {
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 90vh;
 }
 .contenedor-body::-webkit-scrollbar {width: 1.5vmin;}
