--- a/CSS/master.css
+++ b/CSS/master.css
@@ -52,7 +52,7 @@ input[type=number] {
 .header{
     z-index: 10;
     background-color: #E9A032;
-    height:10vh;
+    height:10vmin;
     top:0px;
     position:sticky;
     box-shadow: 0px 2px 10px #36363693;
@@ -60,6 +60,7 @@ input[type=number] {
 }
 .footer
 {
+    width: 100vw;
     box-shadow: 0px -3px 15px #dac6a2;
     border-block-start: 3px solid #dac6a2; 
 }
