--- a/CSS/galeria.css
+++ b/CSS/galeria.css
@@ -64,7 +64,7 @@
 .cont-foto:hover .foto{transition-delay: 0s;margin-top: 0vmin;}
 .fondo-container
 {
-    background-image: url("../IMG/Recursos/FondoGaleria.png");
+    background-image: url("../IMG/Recursos/FondoGaleria.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
