--- a/CSS/galeria.css
+++ b/CSS/galeria.css
@@ -89,7 +89,7 @@
     font-size: 2vh;
     z-index: 20;
     position: absolute;
-    top: 88vh;
+    top: 80%;
     right: -40vh;
     height: 10vh;
     width: 25vh;
